--- a/index.html
+++ b/index.html
@@ -36,5 +36,19 @@
             </div>
         </section>
     </header>
+    <main>
+        <section class="sponser-container">
+            <div class="sponsor">
+                <img src="./logos/Alibaba.svg" alt="">
+                <img src="./logos/Amazon.svg" alt="">
+                <img src="./logos/Daraz.pk Logo.svg" alt="">
+                <img src="./logos/Ebay.svg" alt="">
+                <img src="./logos/Target.svg" alt="">
+                <img src="./logos/Rakuten.svg" alt="">
+                <img src="./logos/Walmart.svg" alt="">
+            </div>
+
+        </section>
+    </main>
 </body>
 </html>
