--- a/index.html
+++ b/index.html
@@ -47,7 +47,75 @@
                 <img src="./logos/Rakuten.svg" alt="">
                 <img src="./logos/Walmart.svg" alt="">
             </div>
-
+        </section>
+        <section class="card-container">
+            <h4 id="hh4">Popular Collection</h4>
+            <div class="card-info">
+            <div class="card">
+                <img src="./images/action.png" alt="">
+                <h4>Flex Tripod</h4>
+                <h5>$50.48</h5>
+                <!-- <p>4.99</p> -->
+                 <p>Wordwide shifting<br>available <br>Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/action.png" alt="">
+                <h4>Flex Tripod</h4>
+                <h5>$50.48</h5>
+                <!-- <p>4.99</p> -->
+                 <p>Wordwide shifting<br>available <br>Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/action.png" alt="">
+                <h4>Flex Tripod</h4>
+                <h5>$50.48</h5>
+                <!-- <p>4.99</p> -->
+                 <p>Wordwide shifting<br>available <br>Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/action.png" alt="">
+                <h4>Flex Tripod</h4>
+                <h5>$50.48</h5>
+                <!-- <p>4.99</p> -->
+                 <p>Wordwide shifting<br>available <br>Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/action.png" alt="">
+                <h4>Flex Tripod</h4>
+                <h5>$50.48</h5>
+                <!-- <p>4.99</p> -->
+                 <p>Wordwide shifting<br>available <br>Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/action.png" alt="">
+                <h4>Flex Tripod</h4>
+                <h5>$50.48</h5>
+                <!-- <p>4.99</p> -->
+                 <p>Wordwide shifting<br>available <br>Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/action.png" alt="">
+                <h4>Flex Tripod</h4>
+                <h5>$50.48</h5>
+                <!-- <p>4.99</p> -->
+                 <p>Wordwide shifting<br>available <br>Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/action.png" alt="">
+                <h4>Flex Tripod</h4>
+                <h5>$50.48</h5>
+                <!-- <p>4.99</p> -->
+                 <p>Wordwide shifting<br>available <br>Buyers protection possible!</p>
+            </div>
+            <div class="card">
+                <img src="./images/action.png" alt="">
+                <h4>Flex Tripod</h4>
+                <h5>$50.48</h5>
+                <!-- <p>4.99</p> -->
+                 <p>Wordwide shifting<br>available <br>Buyers protection possible!</p>
+            </div>
+            </div>
+               <div class="see-more">See more<i class="fa-solid fa-arrow-right"></i></div>
         </section>
     </main>
 </body>
