--- a/index.html
+++ b/index.html
@@ -117,6 +117,14 @@
             </div>
                <div class="see-more">See more<i class="fa-solid fa-arrow-right"></i></div>
         </section>
+        <section class="feature">
+            <div class="feature-img"><img src="./images/gear.png" alt=""></div>
+            <div class="feature-info">
+                <h2>Featured products at one place</h2>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                <button class="btn">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+        </section>
     </main>
 </body>
 </html>
